continue: add department search
